--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="#" class="logo">Enigma<span> PROJECET</span></a>
+      <a href="#" class="logo">Enigma<span> PROJECT</span></a>
 
       <nav class="navbar">
         <a href="#home">Home</a>
