--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="box-container">
         <div class="box">
           <div class="image">
-            <img src="images/gtw.jpg" alt="" />
+            <img src="images/har.jpg" alt="" />
           </div>
           <div class="name">
             <h1>HARRY CHIU</h1>
@@ -161,7 +161,7 @@
 
         <div class="box">
           <div class="image">
-            <img src="images/arcer.jpg" alt="" />
+            <img src="images/j.jpg" alt="" />
           </div>
           <div class="name">
             <h1>ANTONIUS JOSE</h1>
@@ -172,7 +172,7 @@
 
         <div class="box">
           <div class="image">
-            <img src="images/arcer.jpg" alt="" />
+            <img src="images/h.jpg" alt="" />
           </div>
           <div class="name">
             <h1>HANIIF SATRIA</h1>
@@ -183,7 +183,7 @@
 
         <div class="box">
           <div class="image">
-            <img src="images/asep.jpg" alt="" />
+            <img src="images/b.jpg" alt="" />
           </div>
           <div class="name">
             <h1>BRANDON</h1>
