--- a/index.html
+++ b/index.html
@@ -75,17 +75,8 @@
             "
           >
             <div class="content">
-              <h3>WADS assignment 2</h3>
-              <p>
-                This application is used to monitor the physical activity of its
-                users. With the sensors contained in it, the fitness tracker can
-                measure steps taken, distance traveled, heart rate, calories
-                burned, etc. This information is then displayed on the device
-                screen or via a smartphone app so users can track and understand
-                their physical activity, and take action to improve their health
-                and fitness. Fitness tracking is often used to inspire an active
-                and healthy lifestyle.
-              </p>
+              <h3>Ticketing System</h3>
+              <p>An elegant ticketing solution, a perfect solution for an apparel brand</p>
             </div>
           </div>
         </div>
