--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
       <nav class="navbar">
         <a href="#home">Home</a>
-        <a href="#track">Previous Project</a>
-        <a href="#feedback">Group Member</a>
-        <a href="#about">About</a>
+        <a href="#PJ">Previous Project</a>
+        <a href="#GM">Group Member</a>
+        <a href="profile-haniif.html">Individual Profile pages </a>
         <a href="#contact">Contact</a>
       </nav>
-      <!-- Only the menu toggle remains -->
+
       <div class="icons">
         <div id="menu-btn" class="fas fa-bars"></div>
       </div>
@@ -45,22 +45,12 @@
                   rgba(0, 0, 0, 0.3),
                   rgba(0, 0, 0, 0.3)
                 ),
-                url('images/bag-fitnes.png');
+                url('images/main.png');
             "
           >
             <div class="content">
-              <h3>Welcome to Our Project</h3>
-              <p>
-                With this application it is used to monitor and track
-                information related to a person's health. By using certain
-                sensors and technology, health trackers can measure physical
-                activity and health parameters such as heart rate and sleep, and
-                analyze this data. The information is then presented in an
-                easy-to-understand form, such as graphs or reports, that helps
-                users understand and monitor their health conditions. Health
-                trackers help individuals make better decisions regarding their
-                lifestyle and health care.
-              </p>
+              <h3>Welcome to My Website</h3>
+              <p>This website is fully responsive designed for optimal viewing on mobile devices where captivating animations truly come to life.</p>
             </div>
           </div>
 
@@ -76,19 +66,21 @@
           >
             <div class="content">
               <h3>Ticketing System</h3>
-              <p>An elegant ticketing solution, a perfect solution for an apparel brand</p>
+              <p>
+                An elegant ticketing solution, a perfect solution for an apparel
+                brand
+              </p>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Previous Project Section as Link Buttons -->
-    <section class="feature" id="track">
+    <section class="feature" id="PJ">
       <h1 class="heading"><span>Previous Project</span></h1>
       <div class="swiper feature-slider">
         <div class="swiper-wrapper">
-          <!-- Project 1 -->
+
           <div class="swiper-slide box">
             <a
               href="https://github.com/Mbulss/Final-Project-AlgoAndProg-Haniif.git"
@@ -103,7 +95,6 @@
             </a>
           </div>
 
-          <!-- Project 2 -->
           <div class="swiper-slide box">
             <a
               href="https://github.com/Mbulss/Final_Project_OOP.git"
@@ -118,7 +109,7 @@
             </a>
           </div>
 
-          <!-- Project 3 -->
+
           <div class="swiper-slide box">
             <a
               href="https://github.com/Mbulss/Final-Project-Data_Structures.git"
@@ -136,12 +127,12 @@
       </div>
     </section>
 
-    <section class="testimonal" id="feedback">
+    <section class="testimonal" id="GM">
       <h1 class="heading">Group Member</h1>
       <div class="box-container">
         <div class="box">
           <div class="image">
-            <img src="images/har.jpg" alt="" />
+            <img src="images/har.jpg" alt="Harry Chiu" />
           </div>
           <div class="name">
             <h1>HARRY CHIU</h1>
@@ -152,7 +143,7 @@
 
         <div class="box">
           <div class="image">
-            <img src="images/j.jpg" alt="" />
+            <img src="images/j.jpg" alt="Antonius Jose" />
           </div>
           <div class="name">
             <h1>ANTONIUS JOSE</h1>
@@ -163,7 +154,7 @@
 
         <div class="box">
           <div class="image">
-            <img src="images/h.jpg" alt="" />
+            <img src="images/h.jpg" alt="Haniif Satria" />
           </div>
           <div class="name">
             <h1>HANIIF SATRIA</h1>
@@ -174,7 +165,7 @@
 
         <div class="box">
           <div class="image">
-            <img src="images/b.jpg" alt="" />
+            <img src="images/b.jpg" alt="Brandon" />
           </div>
           <div class="name">
             <h1>BRANDON</h1>
@@ -205,20 +196,19 @@
           <div class="text">
             <section id="about" class="section"></section>
             <p>
-              Guys nothing important here this is for assignment 2, just for the
-              grade honestly
+              Guys nothing important here this is for assignment 2, just for the grade honestly
             </p>
           </div>
           <div class="icon">
-            <a href="https://www.instagram.com/haniifsatria/"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a href="https://www.tiktok.com/@niifffffff"
-              ><i class="fab fa-tiktok"></i
-            ></a>
-            <a href="https://github.com/Mbulss"
-              ><i class="fab fa-github"></i
-            ></a>
+            <a href="https://www.instagram.com/haniifsatria/">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.tiktok.com/@niifffffff">
+              <i class="fab fa-tiktok"></i>
+            </a>
+            <a href="https://github.com/Mbulss">
+              <i class="fab fa-github"></i>
+            </a>
           </div>
         </div>
 
@@ -227,8 +217,7 @@
           <div class="icons">
             <section id="contact" class="section"></section>
             <a href="https://maps.app.goo.gl/1njRyhMp9ekN5Jvt5">
-              <i class="fas fa-map-marker-alt"></i>Fx Sudirman, Gelora, Tanah
-              Abang District, Special Capital Region of Jakarta 10270
+              <i class="fas fa-map-marker-alt"></i>Fx Sudirman, Gelora, Tanah Abang District, Special Capital Region of Jakarta 10270
             </a>
             <a href="tel:+6281234567890">
               <i class="fas fa-phone-alt"></i>+62 87765870370
