--- a/profile-haniif.html
+++ b/profile-haniif.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile Haniif Satria</title>
+    <title>Profile Haniif Satria Wardana</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -76,7 +76,7 @@
             <img src="images/h.jpg" alt="Haniif Satria" />
           </div>
           <div class="profile-info">
-            <h1>Haniif Satria</h1>
+            <h1>Haniif Satria Wardana</h1>
             <p>Computer Science - l4CC</p>
             <h2>Front End Developer</h2>
             <p>
