--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <img src="images/h.jpg" alt="Haniif Satria" />
           </div>
           <div class="name">
-            <h1>HANIIF SATRIA</h1>
+            <h1>HANIIF SATRIA WARDANA</h1>
             <p>Computer Science - l4CC</p>
           </div>
           <p>Front End Developer</p>
